--- a/src/css/index/header.css
+++ b/src/css/index/header.css
@@ -198,7 +198,7 @@ body.dark_mode .header-burger-img {
     width: 0;
     height: 2px;
     opacity: 0;
-    background-color: var(--color-secondary);
+    background-color: var(--color-rating);
     transition: 
       opacity 500ms var(--transition-function),
       left 500ms var(--transition-function),
