--- a/src/css/utils/modal-rating.css
+++ b/src/css/utils/modal-rating.css
@@ -7,7 +7,7 @@
 
   width: 100%;
   height: 100%;
-  background: rgba(46, 47, 66, 0.4);
+  background: var(--color-primary-medium);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -21,7 +21,13 @@
   border-radius: 20px;
   background-color: rgba(4, 4, 4, 0.4);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* border: 1px solid var(--color-rating); */
 }
+
+body.dark_mode .modal {
+  border: 1px solid var(--color-rating);
+}
+
 .is-hidden {
   opacity: 0;
   visibility: hidden;
